# elsys-example-app

./: .flake8  DesignPatterns.md  locustfile.py  main.py  requirements.txt
.github/workflows/: ci.yml
singleton-example/: CMakeLists.txt  main.cpp
tests/: test_app.py
